Support for configuring sorting of fields based on value lists. Case: SVY-24